--- a/Plugins/Pacenote/config/pacenotes/packages/Smo.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Smo.ini
@@ -5,42 +5,42 @@
 ;
 
 [CATEGORY::MODIFIER]
-file=modifier\de-Extended.ini
+file=modifier\Smo-Extended.ini
 
 [CATEGORY::LINKS]
-file=links\de-Extended.ini
+file=links\Smo-Extended.ini
 
 [CATEGORY::ADDITIONAL]
-file=additional\de-Extended.ini
+file=additional\Smo-Extended.ini
 
 [CATEGORY::LINE]
-file=line\de-Extended.ini
+file=line\Smo-Extended.ini
 
 [CATEGORY::OBSTACLES]
-file=obstacles\de-Extended.ini
+file=obstacles\Smo-Extended.ini
 
 [CATEGORY::CAUTIONS]
-file=cautions\de-Extended.ini
+file=cautions\Smo-Extended.ini
 
 [CATEGORY::ADJECTIVES]
-file=adjectives\de-Extended.ini
+file=adjectives\Smo-Extended.ini
 
 [CATEGORY::DRIVING]
-file=driving\de-Extended.ini
+file=driving\Smo-Extended.ini
 
 [CATEGORY::CONSTRUCTION]
-file=construction\de-Extended.ini
+file=construction\Smo-Extended.ini
 
 [CATEGORY::CONDITION]
-file=condition\de-Extended.ini
+file=condition\Smo-Extended.ini
 
 [CATEGORY::PREPOSITIONS]
-file=prepositions\de-Extended.ini
+file=prepositions\Smo-Extended.ini
 
 [CATEGORY::ROAD]
-file=road\de-Extended.ini
+file=road\Smo-Extended.ini
 
 [CATEGORY::SURFACE]
-file=surface\de-Extended.ini
+file=surface\Smo-Extended.ini
 
 
