--- a/Plugins/Pacenote/config/pacenotes/packages/adjectives/Smo-Extended.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/adjectives/Smo-Extended.ini
@@ -61,13 +61,13 @@ column=0
 [PACENOTE::TIGHTENSTOTHREE]
 id=2004
 Sounds=1
-Snd0=tightensthree.ogg
+Snd0=tightens3.ogg
 column=1
 
 [PACENOTE::TIGHTENSTOTWO]
 id=2005
 Sounds=1
-Snd0=tightenstwo.ogg
+Snd0=tightens2.ogg
 column=0
 
 [PACENOTE::TIGHTENSTOONE]
@@ -85,43 +85,43 @@ column=0
 [PACENOTE::TOSIX]
 id=2008
 Sounds=1
-Snd0=6.ogg
+Snd0=to_6.ogg
 column=1
 
 [PACENOTE::TOFIVE]
 id=2009
 Sounds=1
-Snd0=5.ogg
+Snd0=to_5.ogg
 column=0
 
 [PACENOTE::TOFOUR]
 id=2010
 Sounds=1
-Snd0=4.ogg
+Snd0=to_4.ogg
 column=1
 
 [PACENOTE::TOTHREE]
 id=2011
 Sounds=1
-Snd0=3.ogg
+Snd0=to_90.ogg
 column=0
 
 [PACENOTE::TOTWO]
 id=2012
 Sounds=1
-Snd0=2.ogg
+Snd0=to_2.ogg
 column=1
 
 [PACENOTE::TOONE]
 id=2013
 Sounds=1
-Snd0=1.ogg
+Snd0=to_1.ogg
 column=0
 
 [PACENOTE::TOACUTE]
 id=2014
 Sounds=1
-Snd0=hairpin.ogg
+Snd0=to_acute.ogg
 column=1
 
 [PACENOTE::SLOW]
