--- a/Plugins/Pacenote/config/pacenotes/packages/line/Smo-Extended.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/line/Smo-Extended.ini
@@ -68,7 +68,7 @@ column=0
 [PACENOTE::HOLD]
 id=549
 Sounds=2
-Snd0=pida1.ogg
+Snd0=hold.ogg
 
 column=1
 
@@ -76,7 +76,7 @@ column=1
 id=2023
 Sounds=2
 Snd0=line.ogg
-column=0
+column=-1
 
 [PACENOTE::KEEP_OUT]
 id=221
