--- a/Plugins/Pacenote/config/pacenotes/packages/obstacles/Smo-Extended.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/obstacles/Smo-Extended.ini
@@ -188,7 +188,7 @@ column=-1
 [PACENOTE::OVER_BRIDGE]
 id=200
 Sounds=1
-Snd0=over_brigde.ogg
+Snd0=over_bridge.ogg
 link=INTO
 column=-1
 
@@ -202,7 +202,7 @@ column=-1
 [PACENOTE::OVER_RAILWAY]
 id=202
 Sounds=1
-Snd0=over_railways.ogg
+Snd0=over_railway.ogg
 link=INTO
 column=-1
 
