Tab Kurvenverlauf sortiert

--- a/Plugins/Pacenote/config/pacenotes/packages/Smo.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Smo.ini
@@ -3,6 +3,8 @@
 ; Version:      1.0
 ; Date:         2012-04-01
 ;
+[CATEGORY::Kurvenverlauf]
+file=additional\Kurvenverlauf.ini
 
 [CATEGORY::MODIFIER]
 file=modifier\Smo-Extended.ini
@@ -10,8 +12,7 @@ file=modifier\Smo-Extended.ini
 [CATEGORY::LINKS]
 file=links\Smo-Extended.ini
 
-[CATEGORY::ADDITIONAL]
-file=additional\Smo-Extended.ini
+
 
 [CATEGORY::LINE]
 file=line\Smo-Extended.ini
