--- a/Plugins/Pacenote/config/pacenotes/packages/additional/Kurvenverlauf.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/additional/Kurvenverlauf.ini
@@ -10,10 +10,30 @@
 ; Language:     german / Deutsch
 ; Encoding:     UTF-8
 ;
+[PACENOTE::PLUS]
+id=232
+Sounds=1
+Snd0=plus.ogg
+column=0
+
 [PACENOTE::NARROWS]
 id=14
 Sounds=1
 Snd0=narrows.ogg
+column=1
+
+[PACENOTE::LONG]
+Sounds=1
+Snd0=long.ogg
+column=2
+
+
+
+
+[PACENOTE::PLUSPLUS]
+id=233
+Sounds=1
+Snd0=plusplus.ogg
 column=0
 
 [PACENOTE::WIDEOUT]
@@ -22,11 +42,15 @@ Sounds=1
 Snd0=wideout.ogg
 column=1
 
-[PACENOTE::TIGHT]
-id=251
+[PACENOTE::HALF_LONG]
+id=2103
 Sounds=1
-Snd0=tight.ogg
+Snd0=half_long.ogg
 column=2
+
+
+
+
 
 [PACENOTE::MINUS]
 id=230
@@ -34,10 +58,31 @@ Sounds=1
 Snd0=minus.ogg
 column=0
 
-[PACENOTE::PLUS]
-id=232
+[PACENOTE::TIGHT]
+id=251
 Sounds=1
-Snd0=plus.ogg
+Snd0=tight.ogg
+column=1
+
+[PACENOTE::VERY_LONG]
+id=274
+Sounds=1
+Snd0=very_long.ogg
+column=2
+
+
+
+
+[PACENOTE::MINUSMINUS]
+id=231
+Sounds=1
+Snd0=minusminus.ogg
+column=0
+
+[PACENOTE::ROUND]
+id=250
+Sounds=1
+Snd0=round.ogg
 column=1
 
 [PACENOTE::SHORT]
@@ -46,28 +91,8 @@ Sounds=1
 Snd0=short.ogg
 column=2
 
-[PACENOTE::LONG]
-Sounds=1
-Snd0=long.ogg
-column=0
 
-[PACENOTE::VERY_LONG]
-id=274
-Sounds=1
-Snd0=very_long.ogg
-column=1
 
-[PACENOTE::HALF_LONG]
-id=2103
-Sounds=1
-Snd0=half_long.ogg
-column=2
-
-[PACENOTE::ROUND]
-id=250
-Sounds=1
-Snd0=round.ogg
-column=0
 
 [PACENOTE::SHARP]
 id=249
@@ -75,10 +100,14 @@ Sounds=1
 Snd0=sharp.ogg
 column=1
 
-[PACENOTE::MAYBE]
+[PACENOTE::VERY_SHORT]
+id=275
 Sounds=1
-Snd0=maybe.ogg
-column=2
+Snd0=very_short.ogg
+column=-2
+
+
+
 
 [PACENOTE::EARLY]
 id=234
@@ -86,10 +115,10 @@ Sounds=1
 Snd0=early.ogg
 column=0
 
-[PACENOTE::LATE]
-id=235
+[PACENOTE::EASY]
+id=236
 Sounds=1
-Snd0=late.ogg
+Snd0=easy.ogg
 column=1
 
 [PACENOTE::INSIDE]
@@ -98,28 +127,14 @@ Sounds=1
 Snd0=inside.ogg
 column=2
 
-[PACENOTE::OUTSIDE]
-id=412
-Sounds=1
-Snd0=outside.ogg
-column=0
 
-[PACENOTE::L_FOOT_BRAKING]
-id=551
-Sounds=1
-Snd0=l_foot_braking.ogg
-column=1
 
-[PACENOTE::DOUBLE]
-id=2102
-Sounds=1
-Snd0=double.ogg
-column=2
 
-[PACENOTE::EASY]
-id=236
+
+[PACENOTE::LATE]
+id=235
 Sounds=1
-Snd0=easy.ogg
+Snd0=late.ogg
 column=0
 
 [PACENOTE::HARD]
@@ -128,32 +143,44 @@ Sounds=1
 Snd0=hard.ogg
 column=1
 
-[PACENOTE::MINUSMINUS]
-id=231
+
+[PACENOTE::OUTSIDE]
+id=412
 Sounds=1
-Snd0=minusminus.ogg
-column=-1
+Snd0=outside.ogg
+column=2
+
+
+[PACENOTE::MAYBE]
+Sounds=1
+Snd0=maybe.ogg
+column=0
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 [PACENOTE::LONGLONG]
 id=263
 Sounds=1
 Snd0=longlong.ogg
-column=-1
+column=--1
 
-[PACENOTE::VERY_SHORT]
-id=275
-Sounds=1
-Snd0=very_short.ogg
-column=-1
+
 
 [PACENOTE::SHORTSHORT]
 id=265
 Sounds=1
 Snd0=shortshort.ogg
-column=-1
+column=--1
 
-[PACENOTE::PLUSPLUS]
-id=233
-Sounds=1
-Snd0=plusplus.ogg
-column=-1
