--- a/Plugins/Pacenote/config/pacenotes/packages/driving/Smo-Extended.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/driving/Smo-Extended.ini
@@ -58,7 +58,11 @@ Sounds=1
 Snd0=take_speed.ogg
 column=2
 
-
+[PACENOTE::L_FOOT_BRAKING]
+id=551
+Sounds=1
+Snd0=l_foot_braking.ogg
+column=1
 
 
 
