--- a/Plugins/Pacenote/config/pacenotes/packages/obstacles/Smo-Extended.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/obstacles/Smo-Extended.ini
@@ -41,7 +41,7 @@ column=1
 id=340
 Sounds=1
 Snd0=crest.ogg
-link=INTO
+link=OVER
 column=0
 standard=OVERCREST
 
@@ -49,7 +49,7 @@ standard=OVERCREST
 id=2109
 Sounds=2
 Snd0=smallcrest.ogg
-link=INTO
+link=OVER
 column=1
 standard=OVERCREST
 
@@ -57,7 +57,6 @@ standard=OVERCREST
 id=16
 Sounds=1
 Snd0=overcrest.ogg
-link=INTO
 column=0
 
 [PACENOTE::CONTINUESOVERCREST]
