Teilweise Frontend sortiert

--- a/Plugins/Pacenote/config/pacenotes/packages/Hindernisse/Hindernisse.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Hindernisse/Hindernisse.ini
@@ -251,3 +251,31 @@ Snd0=to_dip.ogg
 link=INTO
 column=-1
 
+[PACENOTE::LEFT_ENTRY_CHICANE]
+id=392
+Sounds=1
+Snd0=left_entry_chicane.ogg
+link=INTO
+column=0
+
+[PACENOTE::RIGHT_ENTRY_CHICANE]
+id=393
+Sounds=1
+Snd0=right_entry_chicane.ogg
+link=INTO
+column=1
+
+[PACENOTE::TWISTY]
+id=12
+Sounds=1
+Snd0=twisty.ogg
+link=INTO
+column=1
+
+[PACENOTE::JUNCTION]
+id=351
+Sounds=2
+Snd0=junction.ogg
+link=ONTO
+column=1
+
