--- a/Plugins/Pacenote/config/pacenotes/packages/Smo.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Smo.ini
@@ -1,10 +1,26 @@
 ;
-; File:         Extended.ini
-; Version:      1.0
-; Date:         2012-04-01
+; File:         Plugins/Pacenote/config/pacenotes/packages/Smo.ini
+; Version:		1.0-smo
+; Date:         2023-02-25
+; Origin: 		Workerbee
+; Compatibility to Janne Laahanens Mod V2
+; Changes:		Smo
+; Contact:		https://github.com/Smo-RBR/RBR-German-tts-Codriver/issues
+
+; Language:     german / Deutsch
+; Encoding:     UTF-8
 ;
-[CATEGORY::Kurvenverlauf]
-file=additional\Kurvenverlauf.ini
+[CATEGORY::KURVENVERLAUF]
+file=Kurvenverlauf\Kurvenverlauf.ini
+
+[CATEGORY::FAHREN]
+file=Fahren\Fahren.ini
+
+[CATEGORY::HINDERNISSE]
+file=Hindernisse\Hindernisse.ini
+
+[CATEGORY::WARNUNGEN]
+file=Warnungen\Warnungen.ini
 
 [CATEGORY::MODIFIER]
 file=modifier\Smo-Extended.ini
@@ -13,24 +29,8 @@ file=modifier\Smo-Extended.ini
 file=links\Smo-Extended.ini
 
 
-
-[CATEGORY::LINE]
-file=line\Smo-Extended.ini
-
-[CATEGORY::OBSTACLES]
-file=obstacles\Smo-Extended.ini
-
-[CATEGORY::CAUTIONS]
-file=cautions\Smo-Extended.ini
-
-[CATEGORY::ADJECTIVES]
-file=adjectives\Smo-Extended.ini
-
-[CATEGORY::DRIVING]
-file=driving\Smo-Extended.ini
-
-[CATEGORY::CONSTRUCTION]
-file=construction\Smo-Extended.ini
+[CATEGORY::BEBAUUNG]
+file=Bebauung\Bebauung.ini
 
 [CATEGORY::CONDITION]
 file=condition\Smo-Extended.ini
@@ -38,10 +38,12 @@ file=condition\Smo-Extended.ini
 [CATEGORY::PREPOSITIONS]
 file=prepositions\Smo-Extended.ini
 
-[CATEGORY::ROAD]
-file=road\Smo-Extended.ini
+[CATEGORY::STRASSE]
+file=Strasse\Strasse.ini
 
-[CATEGORY::SURFACE]
-file=surface\Smo-Extended.ini
+[CATEGORY::BESCHAFFENHEIT]
+file=Beschaffenheit\Beschaffenheit.ini
 
 
+[CATEGORY::Uebrig1]
+file=Uebrig1\Uebrig1.ini
