--- a/Plugins/Pacenote/config/pacenotes/packages/Uebrig1/Uebrig1.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Uebrig1/Uebrig1.ini
@@ -10,11 +10,26 @@
 ; Language:     german / Deutsch
 ; Encoding:     UTF-8
 ;
-[PACENOTE::PLUS]
-id=232
+[PACENOTE::ENTRY]
+id=557
 Sounds=1
-Snd0=plus.ogg
-column=0
+Snd0=entry.ogg
+column=-1
+
+
+
+
+
+
+
+
+
+
+[PACENOTE::DRAWS_IN]
+id=273
+Sounds=1
+Snd0=draws_in.ogg
+column=1
 
 [PACENOTE::NARROWS]
 id=14
@@ -27,14 +42,6 @@ Sounds=1
 Snd0=long.ogg
 column=2
 
-
-
-
-[PACENOTE::PLUSPLUS]
-id=233
-Sounds=1
-Snd0=plusplus.ogg
-column=0
 
 [PACENOTE::WIDEOUT]
 id=15
@@ -49,15 +56,6 @@ Snd0=half_long.ogg
 column=2
 
 
-
-
-
-[PACENOTE::MINUS]
-id=230
-Sounds=1
-Snd0=minus.ogg
-column=0
-
 [PACENOTE::TIGHT]
 id=251
 Sounds=1
@@ -71,14 +69,6 @@ Snd0=very_long.ogg
 column=2
 
 
-
-
-[PACENOTE::MINUSMINUS]
-id=231
-Sounds=1
-Snd0=minusminus.ogg
-column=0
-
 [PACENOTE::ROUND]
 id=250
 Sounds=1
@@ -91,9 +81,6 @@ Sounds=1
 Snd0=short.ogg
 column=2
 
-
-
-
 [PACENOTE::SHARP]
 id=249
 Sounds=1
@@ -104,10 +91,7 @@ column=1
 id=275
 Sounds=1
 Snd0=very_short.ogg
-column=-2
-
-
-
+column=2
 
 [PACENOTE::EARLY]
 id=234
@@ -127,10 +111,6 @@ Sounds=1
 Snd0=inside.ogg
 column=2
 
-
-
-
-
 [PACENOTE::LATE]
 id=235
 Sounds=1
@@ -143,44 +123,132 @@ Sounds=1
 Snd0=hard.ogg
 column=1
 
-
 [PACENOTE::OUTSIDE]
 id=412
 Sounds=1
 Snd0=outside.ogg
 column=2
 
-
 [PACENOTE::MAYBE]
 Sounds=1
 Snd0=maybe.ogg
 column=0
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 [PACENOTE::LONGLONG]
 id=263
 Sounds=1
 Snd0=longlong.ogg
-column=--1
-
-
+column=1
 
 [PACENOTE::SHORTSHORT]
 id=265
 Sounds=1
 Snd0=shortshort.ogg
-column=--1
+column=1
+[PACENOTE::SLOW]
+id=242
+Sounds=1
+Snd0=slow.ogg
+column=1
 
+[PACENOTE::FAST]
+id=241
+Sounds=1
+Snd0=fast.ogg
+column=1
+
+[PACENOTE::NEGATIVE]
+id=295
+Sounds=1
+Snd0=negative.ogg
+column=1
+
+[PACENOTE::POSITIVE]
+id=294
+Sounds=1
+Snd0=positive.ogg
+column=1
+
+[PACENOTE::EXACT]
+id=243
+Sounds=1
+Snd0=exact.ogg
+column=1
+
+[PACENOTE::DIRECTLY]
+id=245
+Sounds=1
+Snd0=directly.ogg
+column=1
+
+[PACENOTE::SLIGHT]
+id=252
+Sounds=1
+Snd0=slight.ogg
+column=1
+
+[PACENOTE::LIGHT]
+id=246
+Sounds=1
+Snd0=light.ogg
+column=1
+
+[PACENOTE::SMALL]
+id=248
+Sounds=1
+Snd0=small.ogg
+column=1
+
+[PACENOTE::BIG]
+id=247
+Sounds=1
+Snd0=big.ogg
+column=1
+
+[PACENOTE::GOOD]
+id=253
+Sounds=1
+Snd0=good.ogg
+column=1
+
+[PACENOTE::BAD]
+id=254
+Sounds=1
+Snd0=bad.ogg
+column=1
+
+[PACENOTE::STRAIGHT]
+id=257
+Sounds=1
+Snd0=straight.ogg
+column=1
+
+[PACENOTE::VERY]
+id=239
+Sounds=1
+Snd0=very.ogg
+column=1
+
+[PACENOTE::MUCH]
+id=237
+Sounds=1
+Snd0=much.ogg
+column=1
+
+[PACENOTE::MANY]
+id=238
+Sounds=1
+Snd0=many.ogg
+column=1
+
+[PACENOTE::UNDERSTEER]
+id=270
+Sounds=1
+Snd0=understeer.ogg
+column=2
+
+[PACENOTE::FULL]
+id=214
+Sounds=1
+Snd0=full.ogg
+column=3
