--- a/Plugins/Pacenote/config/pacenotes/packages/Beschaffenheit/Beschaffenheit.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Beschaffenheit/Beschaffenheit.ini
@@ -192,3 +192,26 @@ id=296
 Sounds=1
 Snd0=dirt.ogg
 column=1
+
+[PACENOTE::BUMPS]
+id=300
+Sounds=2
+Snd0=bumps.ogg
+link=INTO
+column=1
+
+[PACENOTE::HOLE]
+id=344
+Sounds=2
+Snd0=hole.ogg
+link=INTO
+column=1
+
+
+
+[PACENOTE::PUDDLE]
+id=389
+Sounds=1
+Snd0=puddle.ogg
+link=INTO
+column=1
