--- a/Plugins/Pacenote/config/pacenotes/packages/Kurvenverlauf/Kurvenverlauf.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Kurvenverlauf/Kurvenverlauf.ini
@@ -143,7 +143,13 @@ Snd0=opens.ogg
 column=2
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 8 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-
+[PACENOTE::CONTINUESOVERCREST]
+id=2029
+Sounds=1
+Snd0=overcrest.ogg
+link=INTO
+column=2
+standard=OVERCREST
 
 
 
