--- a/Plugins/Pacenote/config/pacenotes/packages/Smo.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Smo.ini
@@ -10,8 +10,16 @@
 ; Language:     german / Deutsch
 ; Encoding:     UTF-8
 ;
+[CATEGORY::modifier]
+file=modifier\Extended.ini
+[CATEGORY::Abstimmung]
+file=Abstimmung/Abstimmung.ini
+
 [CATEGORY::KURVENVERLAUF]
 file=Kurvenverlauf\Kurvenverlauf.ini
+
+[CATEGORY::STRASSENVERLAUF]
+file=Strassenverlauf\Strassenverlauf.ini
 
 [CATEGORY::FAHREN]
 file=Fahren\Fahren.ini
@@ -22,11 +30,9 @@ file=Hindernisse\Hindernisse.ini
 [CATEGORY::WARNUNGEN]
 file=Warnungen\Warnungen.ini
 
-[CATEGORY::MODIFIER]
-file=modifier\Smo-Extended.ini
 
-[CATEGORY::LINKS]
-file=links\Smo-Extended.ini
+
+
 
 
 [CATEGORY::BEBAUUNG]
@@ -38,8 +44,7 @@ file=condition\Smo-Extended.ini
 [CATEGORY::PREPOSITIONS]
 file=prepositions\Smo-Extended.ini
 
-[CATEGORY::STRASSE]
-file=Strasse\Strasse.ini
+
 
 [CATEGORY::BESCHAFFENHEIT]
 file=Beschaffenheit\Beschaffenheit.ini
