--- a/Plugins/Pacenote/config/pacenotes/packages/condition/Smo-Extended.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/condition/Smo-Extended.ini
@@ -89,5 +89,36 @@ Sounds=1
 Snd0=dirt.ogg
 column=1
 
+[PACENOTE::RUTS]
+id=345
+Sounds=1
+Snd0=ruts.ogg
+column=1
+
+[PACENOTE::SLIPPERY]
+id=268
+Sounds=1
+Snd0=slippery.ogg
+column=0
 
 
+[PACENOTE::SLIPPY]
+id=277
+Sounds=1
+Snd0=slippy.ogg
+column=1
+
+[PACENOTE::HOLE]
+id=344
+Sounds=1
+Snd0=hole.ogg
+link=INTO
+column=1
+
+
+[PACENOTE::DEEPRUTS]
+id=346
+Sounds=1
+Snd0=deepruts.ogg
+link=INTO
+column=1
