--- a/Plugins/Pacenote/config/pacenotes/packages/Uebrig1/Uebrig1.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Uebrig1/Uebrig1.ini
@@ -17,8 +17,41 @@ Snd0=entry.ogg
 column=-1
 
 
+[PACENOTE::STOP]
+id=431
+Sounds=1
+Snd0=stop.ogg
+column=1
+
+[PACENOTE::DONE]
+id=430
+Sounds=1
+Snd0=done.ogg
+column=2
 
 
+
+
+[PACENOTE::FINISH]
+id=22
+Sounds=1
+Snd0=finish.ogg
+column=-1
+
+[PACENOTE::AND]
+Sounds=1
+Snd0=and.ogg
+column=0
+
+[PACENOTE::INTO]
+Sounds=1
+Snd0=into.ogg
+column=1
+
+[PACENOTE::ONTO]
+Sounds=1
+Snd0=onto.ogg
+column=2
 
 
 
