Dieses beschissene Frontend weiter aufgeräumt. Wer die Konfig gemacht hat gehört echt an den Eiern aufgehängt.

--- a/Plugins/Pacenote/config/pacenotes/packages/Fahren/Fahren.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Fahren/Fahren.ini
@@ -185,11 +185,18 @@ Snd0=avoid_jump.ogg
 link=INTO
 column=0
 
+[PACENOTE::SLIDE]
+id=269
+Sounds=1
+Snd0=slide.ogg
+column=1
+
+
 [PACENOTE::TO_SIGHT_DISTANCE]
 id=555
 Sounds=1
 Snd0=to_sight_distance.ogg
-column=3
+column=2
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 9 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Ausgeblended ;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -238,3 +245,9 @@ Snd0=clip.ogg
 column=-1
 
 
+[PACENOTE::TURN]
+id=353
+Sounds=1
+Snd0=turn.ogg
+link=AND
+column=2
