--- a/Plugins/Pacenote/config/pacenotes/packages/Smo.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Smo.ini
@@ -38,8 +38,8 @@ file=Warnungen\Warnungen.ini
 [CATEGORY::BEBAUUNG]
 file=Bebauung\Bebauung.ini
 
-[CATEGORY::CONDITION]
-file=condition\Smo-Extended.ini
+[CATEGORY::Bedingungen]
+file=Bedingungen\Bedingungen.ini
 
 [CATEGORY::PREPOSITIONS]
 file=prepositions\Smo-Extended.ini
