--- a/Plugins/Pacenote/config/pacenotes/packages/Strassenverlauf/Strassenverlauf.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Strassenverlauf/Strassenverlauf.ini
@@ -10,54 +10,19 @@
 ; Language:     german / Deutsch
 ; Encoding:     UTF-8
 ;
-[PACENOTE::CURVE]
-id=352
-Sounds=1
-Snd0=curve.ogg
-link=INTO
-column=1
 
-[PACENOTE::TURN]
-id=353
-Sounds=1
-Snd0=turn.ogg
-link=INTO
-column=2
-
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 1 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 [PACENOTE::CAMBER]
 id=342
 Sounds=1
 Snd0=camber.ogg
 column=0
 
-[PACENOTE::REVERSE_CAMBER]
-id=343
+[PACENOTE::FORK_LEFT]
+id=365
 Sounds=1
-Snd0=bad_camber.ogg
-column=1
-
-[PACENOTE::BAD_CAMBER]
-id=355
-Sounds=1
-Snd0=bad_camber.ogg
-column=2
-
-[PACENOTE::HOLLOW]
-id=341
-Sounds=1
-Snd0=hollow.ogg
-column=3
-
-[PACENOTE::NEGATIVE_CAMBER]
-id=367
-Sounds=1
-Snd0=bad_camber.ogg
-column=0
-
-[PACENOTE::POSITIVE_CAMBER]
-id=368
-Sounds=1
-Snd0=camber.ogg
+Snd0=fork_left.ogg
+link=INTO
 column=1
 
 [PACENOTE::NARROW]
@@ -66,44 +31,38 @@ Sounds=1
 Snd0=narrow.ogg
 column=2
 
-[PACENOTE::WIDE]
-id=256
+[PACENOTE::DROPS]
+id=362
 Sounds=1
-Snd0=wide.ogg
+Snd0=drops.ogg
 column=3
-
-[PACENOTE::FORK_LEFT]
-id=365
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 2 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+[PACENOTE::NEGATIVE_CAMBER]
+id=367
 Sounds=1
-Snd0=fork_left.ogg
-link=INTO
-column=2
+Snd0=bad_camber.ogg
+column=0
+
 
 [PACENOTE::FORK_RIGHT]
 id=366
 Sounds=1
 Snd0=fork_right.ogg
 link=INTO
-column=3
+column=1
+
+[PACENOTE::WIDE]
+id=256
+Sounds=1
+Snd0=wide.ogg
+column=2
 
 [PACENOTE::DROPS_LEFT]
 id=363
 Sounds=1
 Snd0=drops_left.ogg
-column=0
-
-[PACENOTE::DROPS_RIGHT]
-id=364
-Sounds=1
-Snd0=drops_right.ogg
-column=1
-
-[PACENOTE::DROPS]
-id=362
-Sounds=1
-Snd0=drops.ogg
-column=2
-
+column=3
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 3 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [PACENOTE::JUNCTION]
 id=351
@@ -112,30 +71,80 @@ Snd0=junction.ogg
 link=ONTO
 column=1
 
-[PACENOTE::TWISTY]
-id=12
+[PACENOTE::NARROWS]     ; legacy sound and modifier
 Sounds=1
-Snd0=twisty.ogg
-link=INTO
-column=1
-[PACENOTE::TODIP]
-id=2024
-Sounds=1
-Snd0=to_dip.ogg
-link=INTO
-column=1
+Snd0=narrows.ogg
+column=2
 
+
+[PACENOTE::DROPS_RIGHT]
+id=364
+Sounds=1
+Snd0=drops_right.ogg
+column=3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 4 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[PACENOTE::WIDEOUT]     ; legacy sound and modifier
+Sounds=1
+Snd0=wideout.ogg
+column=2
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 5 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 [PACENOTE::OVER_JUMP]
 id=2108
 Sounds=2
 Snd0=over_jump.ogg
 column=0
 
+[PACENOTE::TWISTY]
+id=12
+Sounds=1
+Snd0=twisty.ogg
+link=INTO
+column=1
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 6 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 [PACENOTE::OVERCREST]
 id=16
 Sounds=1
 Snd0=overcrest.ogg
 column=0
+[PACENOTE::CRAMPED]
+id=293
+Sounds=1
+Snd0=cramped.ogg
+column=2
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 7 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+[PACENOTE::TODIP]
+id=2024
+Sounds=1
+Snd0=to_dip.ogg
+link=INTO
+column=0
+
+[PACENOTE::HOLLOW]
+id=341
+Sounds=1
+Snd0=hollow.ogg
+column=1
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 8 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 9 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 [PACENOTE::OVER_BRIDGE]
 id=200
@@ -158,15 +167,8 @@ Snd0=over_railway.ogg
 link=INTO
 column=2
 
-[PACENOTE::NARROWS]     ; legacy sound and modifier
-Sounds=1
-Snd0=narrows.ogg
-column=0
 
-[PACENOTE::WIDEOUT]     ; legacy sound and modifier
-Sounds=1
-Snd0=wideout.ogg
-column=1
+
 
 [PACENOTE::STEEP_SLOPE]
 id=359
@@ -191,3 +193,33 @@ id=354
 Sounds=1
 Snd0=steep_drop.ogg
 column=1
+
+
+
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; ausgeblended ;;;;;;;;;;;;;;;;;;;;;;;;;;
+[PACENOTE::POSITIVE_CAMBER]
+id=368
+Sounds=1
+Snd0=camber.ogg
+column=-1
+
+[PACENOTE::BAD_CAMBER]
+id=355
+Sounds=1
+Snd0=bad_camber.ogg
+column=-1
+
+[PACENOTE::CURVE]
+id=352
+Sounds=1
+Snd0=curve.ogg
+link=INTO
+column=-1
+
+[PACENOTE::REVERSE_CAMBER]
+id=343
+Sounds=1
+Snd0=bad_camber.ogg
+column=-1
