--- a/Plugins/Pacenote/config/pacenotes/packages/Beschaffenheit/Beschaffenheit.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Beschaffenheit/Beschaffenheit.ini
@@ -114,11 +114,6 @@ column=-1
 
 
 
-[PACENOTE::SLIDE]
-id=269
-Sounds=1
-Snd0=slide.ogg
-column=1
 
 [PACENOTE::MUDDY]
 id=290
@@ -132,23 +127,7 @@ Sounds=1
 Snd0=dirty.ogg
 column=3
 
-[PACENOTE::DRY]
-id=547
-Sounds=1
-Snd0=dry.ogg
-column=0
 
-[PACENOTE::DAMP]
-id=548
-Sounds=1
-Snd0=damp.ogg
-column=1
-
-[PACENOTE::WET]
-id=546
-Sounds=1
-Snd0=wet.ogg
-column=2
 
 [PACENOTE::BUMPY]
 id=292
@@ -163,29 +142,9 @@ Snd0=bumps.ogg
 link=INTO
 column=1
 
-[PACENOTE::CRAMPED]
-id=293
-Sounds=1
-Snd0=cramped.ogg
-column=2
 
-[PACENOTE::GRIP_OFF]
-id=552
-Sounds=1
-Snd0=grip_off.ogg
-column=0
 
-[PACENOTE::GRIP]
-id=553
-Sounds=1
-Snd0=grip.ogg
-column=1
 
-[PACENOTE::GOOD_GRIP]
-id=554
-Sounds=1
-Snd0=good_grip.ogg
-column=2
 
 [PACENOTE::DIRT]
 id=296
@@ -215,3 +174,52 @@ Sounds=1
 Snd0=puddle.ogg
 link=INTO
 column=1
+
+[PACENOTE::RUTS]
+id=345
+Sounds=1
+Snd0=ruts.ogg
+column=1
+
+
+
+
+
+
+
+
+[PACENOTE::DEEPRUTS]
+id=346
+Sounds=1
+Snd0=deepruts.ogg
+link=INTO
+column=1
+
+[PACENOTE::CAMBER]
+id=342
+Sounds=1
+Snd0=camber.ogg
+column=0
+[PACENOTE::NEGATIVE_CAMBER]
+id=367
+Sounds=1
+Snd0=bad_camber.ogg
+column=0
+
+[PACENOTE::DROPS]
+id=362
+Sounds=1
+Snd0=drops.ogg
+column=3
+
+[PACENOTE::DROPS_LEFT]
+id=363
+Sounds=1
+Snd0=drops_left.ogg
+column=3
+
+[PACENOTE::DROPS_RIGHT]
+id=364
+Sounds=1
+Snd0=drops_right.ogg
+column=3
