--- a/Plugins/Pacenote/config/pacenotes/packages/Kurven/Smo-Mix.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Kurven/Smo-Mix.ini
@@ -68,29 +68,6 @@ Snd0=plusplus.ogg
 column=3
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 3 ;;;;;;;;;;;;;;;;;;;;;;;;;;
-
-[PACENOTE::TWO_LEFT]
-id=102
-Sounds=1
-Snd0=two_left.ogg
-link=INTO
-column=0
-
-[PACENOTE::TWO_RIGHT]
-id=112
-Sounds=1
-Snd0=two_right.ogg
-link=INTO
-column=1
-
-[PACENOTE::MINUS]
-id=230
-Sounds=1
-Snd0=minus.ogg
-column=3
-
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 4 ;;;;;;;;;;;;;;;;;;;;;;;;;;
-
 [PACENOTE::SQUARE_LEFT]
 id=1
 Sounds=1
@@ -104,6 +81,46 @@ Sounds=1
 Snd0=square_right.ogg
 link=INTO
 column=1
+
+[PACENOTE::TWO_LEFT]
+id=102
+Sounds=1
+Snd0=two_left.ogg
+link=INTO
+column=-1
+standard=HAIRPINLEFT
+
+[PACENOTE::TWO_RIGHT]
+id=112
+Sounds=1
+Snd0=two_right.ogg
+link=INTO
+column=-1
+standard=HAIRPINRIGHT
+
+[PACENOTE::MINUS]
+id=230
+Sounds=1
+Snd0=minus.ogg
+column=3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 4 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+[PACENOTE::THREE_LEFT]
+id=2
+Sounds=1
+Snd0=three_left.ogg
+link=INTO
+column=0
+
+[PACENOTE::THREE_RIGHT]
+id=9
+Sounds=1
+Snd0=three_right.ogg
+link=INTO
+column=1
+
+
 
 [PACENOTE::LEFT_INTO]
 id=123
@@ -120,29 +137,6 @@ column=3
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 5 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-[PACENOTE::THREE_LEFT]
-id=2
-Sounds=1
-Snd0=three_left.ogg
-link=INTO
-column=0
-
-[PACENOTE::THREE_RIGHT]
-id=9
-Sounds=1
-Snd0=three_right.ogg
-link=INTO
-column=1
-
-[PACENOTE::RIGHT_INTO]
-id=122
-Sounds=1
-Snd0=right_into.ogg
-link=INTO
-column=2
-
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 6 ;;;;;;;;;;;;;;;;;;;;;;;;;;
-
 [PACENOTE::FOUR_LEFT]
 id=3
 Sounds=1
@@ -157,8 +151,14 @@ Snd0=four_right.ogg
 link=INTO
 column=1
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 7 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+[PACENOTE::RIGHT_INTO]
+id=122
+Sounds=1
+Snd0=right_into.ogg
+link=INTO
+column=2
 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 6 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 [PACENOTE::FIVE_LEFT]
 id=4
 Sounds=1
@@ -173,14 +173,8 @@ Snd0=five_right.ogg
 link=INTO
 column=1
 
-[PACENOTE::LEFT_AROUND]
-id=127
-Sounds=1
-Snd0=left_around.ogg
-link=INTO
-column=2
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 8 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 7 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [PACENOTE::EASY_LEFT]
 id=5
@@ -196,14 +190,14 @@ Snd0=easy_right.ogg
 link=INTO
 column=1
 
-[PACENOTE::RIGHT_AROUND]
-id=126
+[PACENOTE::LEFT_AROUND]
+id=127
 Sounds=1
-Snd0=right_around.ogg
+Snd0=left_around.ogg
 link=INTO
 column=2
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 9 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 8 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [PACENOTE::FLAT_LEFT]
 id=26
@@ -219,8 +213,28 @@ Snd0=flat_right.ogg
 link=INTO
 column=1
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 10 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+[PACENOTE::RIGHT_AROUND]
+id=126
+Sounds=1
+Snd0=right_around.ogg
+link=INTO
+column=2
 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 9 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+[PACENOTE::TIGHTENSTOONE]
+id=2006
+Sounds=1
+Snd0=tightens_acute.ogg
+column=3
+
+[PACENOTE::TIGHTENSTOTWO]
+id=2005
+Sounds=1
+Snd0=tightens90.ogg
+column=3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 10 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 11 ;;;;;;;;;;;;;;;;;;;;;;;;;;
