--- a/Plugins/Pacenote/config/pacenotes/packages/Kurven/Smo-Mix.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Kurven/Smo-Mix.ini
@@ -85,18 +85,18 @@ column=1
 [PACENOTE::TWO_LEFT]
 id=102
 Sounds=1
-Snd0=two_left.ogg
+Snd0=square_left.ogg
 link=INTO
 column=-1
-standard=HAIRPINLEFT
+standard=HAIRPIN_LEFT
 
 [PACENOTE::TWO_RIGHT]
 id=112
 Sounds=1
-Snd0=two_right.ogg
+Snd0=square_right.ogg
 link=INTO
 column=-1
-standard=HAIRPINRIGHT
+standard=HAIRPIN_RIGHT
 
 [PACENOTE::MINUS]
 id=230
