--- a/Plugins/Pacenote/config/pacenotes/packages/Kurven/Smo-Mix.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Kurven/Smo-Mix.ini
@@ -12,17 +12,17 @@
 ;
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 1 ;;;;;;;;;;;;;;;;;;;;;;;;;;
-[PACENOTE::LEFT]
-id=120
+[PACENOTE::HAIRPIN_LEFT]
+id=0
 Sounds=1
-Snd0=left.ogg
+Snd0=hairpin_left.ogg
 link=INTO
 column=0
 
-[PACENOTE::RIGHT]
-id=121
+[PACENOTE::HAIRPIN_RIGHT]
+id=11
 Sounds=1
-Snd0=right.ogg
+Snd0=hairpin_right.ogg
 link=INTO
 column=1
 
@@ -41,18 +41,20 @@ column=3
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 2 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-[PACENOTE::HAIRPIN_LEFT]
-id=0
+[PACENOTE::TWO_LEFT]
+id=102
 Sounds=1
-Snd0=hairpin_left.ogg
+Snd0=two_left.ogg
 link=INTO
+standard=HAIRPIN_LEFT
 column=0
 
-[PACENOTE::HAIRPIN_RIGHT]
-id=11
+[PACENOTE::TWO_RIGHT]
+id=112
 Sounds=1
-Snd0=hairpin_right.ogg
+Snd0=two_right.ogg
 link=INTO
+standard=HAIRPIN_RIGHT
 column=1
 [PACENOTE::RIGHT_LEFT]
 id=124
@@ -235,7 +237,19 @@ Snd0=tightens90.ogg
 column=3
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 10 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+[PACENOTE::LEFT]
+id=120
+Sounds=1
+Snd0=left.ogg
+link=INTO
+column=0
 
+[PACENOTE::RIGHT]
+id=121
+Sounds=1
+Snd0=right.ogg
+link=INTO
+column=1
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 11 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
