--- a/Plugins/Pacenote/config/pacenotes/packages/Kurven/Smo-Mix.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Kurven/Smo-Mix.ini
@@ -87,7 +87,7 @@ column=1
 [PACENOTE::TWO_LEFT]
 id=102
 Sounds=1
-Snd0=square_left.ogg
+Snd0=two_left.ogg
 link=INTO
 column=-1
 standard=HAIRPIN_LEFT
@@ -95,7 +95,7 @@ standard=HAIRPIN_LEFT
 [PACENOTE::TWO_RIGHT]
 id=112
 Sounds=1
-Snd0=square_right.ogg
+Snd0=two_right.ogg
 link=INTO
 column=-1
 standard=HAIRPIN_RIGHT
