--- a/Plugins/Pacenote/config/pacenotes/packages/Bebauung/Bebauung.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Bebauung/Bebauung.ini
@@ -77,7 +77,7 @@ column=2
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 4 ;;;;;;;;;;;;;;;;;;;;;;;;;;
-[PACENOTE::ROUNDABOUT]
+[PACENOTE::ROUNDABT]
 id=399
 Sounds=1
 Snd0=roundabout.ogg
@@ -128,14 +128,6 @@ Snd0=house.ogg
 link=INTO
 column=2
 
-
-
-[PACENOTE::WOODEN_FENCE]
-id=443
-Sounds=1
-Snd0=wooden_fence.ogg
-link=INTO
-column=-1
 
 
 
