--- a/Plugins/Pacenote/config/pacenotes/Smo-Nummern_und_90 - Kopie.ini
+++ b/Plugins/Pacenote/config/pacenotes/Smo-Nummern_und_90 - Kopie.ini
@@ -5,7 +5,7 @@
 ;
 
 [PACKAGE::MIX]
-file0=packages\Kurven\Smo-Nummern_und_90.ini
+file0=packages\Smo-Nummern_und_90.ini
 file1=packages\Smo.ini
 
 
