--- a/Plugins/Pacenote/config/pacenotes/packages/Bebauung/Bebauung.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Bebauung/Bebauung.ini
@@ -77,7 +77,7 @@ column=2
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 4 ;;;;;;;;;;;;;;;;;;;;;;;;;;
-[PACENOTE::ROUNDABT]
+[PACENOTE::ROUNDABOUT]
 id=399
 Sounds=1
 Snd0=roundabout.ogg
