--- a/Plugins/Pacenote/config/pacenotes/packages/Smo-Mix.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Smo-Mix.ini
@@ -4,8 +4,5 @@
 ; Date:         2012-04-01
 ;
 
-[PACKAGE::MIX]
-file0=Kurven\Smo-Mix.ini
-file1=packages\Smo.ini
-
-
+[CATEGORY::Kurven]
+file=Kurven\Smo-Mix.ini
