--- a/Plugins/Pacenote/config/pacenotes/packages/Smo-Nummern.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Smo-Nummern.ini
@@ -4,8 +4,8 @@
 ; Date:         2012-04-01
 ;
 
-[PACKAGE::MIX]
-file0=Kurven\Smo-Nummern.ini
-file1=packages\Smo.ini
+[CATEGORY::Kurven]
+file=Kurven\Smo-Nummern.ini
+
 
 
