--- a/Plugins/Pacenote/config/pacenotes/packages/Smo-Nummern_und_90.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Smo-Nummern_und_90.ini
@@ -4,8 +4,7 @@
 ; Date:         2012-04-01
 ;
 
-[PACKAGE::MIX]
-file0=packages\Smo-Nummern_und_90.ini
-file1=packages\Smo.ini
+[CATEGORY::Kurven]
+file=Kurven\Smo-Nummern_und_90.ini
 
 
