--- a/Plugins/Pacenote/config/pacenotes/packages/Strassenverlauf/Strassenverlauf.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Strassenverlauf/Strassenverlauf.ini
@@ -56,7 +56,7 @@ id=362
 Sounds=1
 Snd0=drops.ogg
 column=3
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 2 ;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 3 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 [PACENOTE::NEGATIVE_CAMBER]
 id=367
 Sounds=1
@@ -170,6 +170,11 @@ Snd0=over_bridge.ogg
 link=INTO
 column=2
 
+[PACENOTE::UPHILL]
+id=260
+Sounds=1
+Snd0=uphill.ogg
+column=3
 
 [PACENOTE::HOLLOW]
 id=341
@@ -185,6 +190,11 @@ Snd0=over_rails.ogg
 link=INTO
 column=2
 
+[PACENOTE::DOWNHILL]
+id=261
+Sounds=1
+Snd0=downhill.ogg
+column=3
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 8 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [PACENOTE::OVER_RAILWAY]
@@ -197,29 +207,6 @@ column=2
 column=1
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 8 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 9 ;;;;;;;;;;;;;;;;;;;;;;;;;;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 [PACENOTE::OVER_BRIDGE]
 id=200
@@ -241,9 +228,6 @@ Sounds=1
 Snd0=over_railway.ogg
 link=INTO
 column=2
-
-
-
 
 
 [PACENOTE::STEEP_SLOPE]
