Sacrf Rechts und Scarf Links als Audio hinzugefügt und in Smo Mix die 2 links und 2 rechts damit ersetzt

--- a/.gitignore
+++ b/.gitignore
@@ -2158,3 +2158,4 @@ Plugins/RBRControls/Shifter_AutoDetect.wav
 Plugins/RBRControls/Shifter_Error.wav
 Plugins/RBRControls/Shifter_HPattern.wav
 Plugins/RBRControls/Shifter_Sequential.wav
+carlist/carlist.ini
