--- a/Plugins/Pacenote/config/pacenotes/packages/Kurven/Smo-Mix.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Kurven/Smo-Mix.ini
@@ -41,17 +41,17 @@ column=3
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 2 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-[PACENOTE::TWO_LEFT]
+[PACENOTE::SHARP_LEFT]
 id=102
 Sounds=1
-Snd0=two_left.ogg
+Snd0=sharp_left.ogg
 link=INTO
 column=0
 
-[PACENOTE::TWO_RIGHT]
+[PACENOTE::SHARP_RIGHT]
 id=112
 Sounds=1
-Snd0=two_right.ogg
+Snd0=sharp_right.ogg
 link=INTO
 column=1
 [PACENOTE::RIGHT_LEFT]
