Number-Reverse als Smo-Richtung himnzugefügt

--- a/Plugins/Pacenote/config/pacenotes/packages/Kurven/Smo-Richtung.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Kurven/Smo-Richtung.ini
@@ -15,14 +15,14 @@
 [PACENOTE::HAIRPIN_LEFT]
 id=0
 Sounds=1
-Snd0=hairpin_left.ogg
+Snd0=left_hairpin.ogg
 link=INTO
 column=0
 
 [PACENOTE::HAIRPIN_RIGHT]
 id=11
 Sounds=1
-Snd0=hairpin_right.ogg
+Snd0=right_hairpin.ogg
 link=INTO
 column=1
 
@@ -41,17 +41,17 @@ column=3
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 2 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-[PACENOTE::SHARP_LEFT]
+[PACENOTE::ONE_LEFT]
 id=102
 Sounds=1
-Snd0=sharp_left.ogg
+Snd0=left_one.ogg
 link=INTO
 column=0
 
-[PACENOTE::SHARP_RIGHT]
+[PACENOTE::ONE_RIGHT]
 id=112
 Sounds=1
-Snd0=sharp_right.ogg
+Snd0=right_one.ogg
 link=INTO
 column=1
 [PACENOTE::RIGHT_LEFT]
@@ -68,18 +68,17 @@ Snd0=plusplus.ogg
 column=3
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 3 ;;;;;;;;;;;;;;;;;;;;;;;;;;
-[PACENOTE::SQUARE_LEFT]
+[PACENOTE::TWO_LEFT]
 id=1
 Sounds=1
-Snd0=square_left.ogg
+Snd0=left_two.ogg
 link=INTO
-column=0dHidmSwik
+column=0
 
-ausruf=90 links
-[PACENOTE::SQUARE_RIGHT]
+[PACENOTE::TWO_RIGHT]
 id=10
 Sounds=1
-Snd0=square_right.ogg
+Snd0=right_two.ogg
 link=INTO
 column=1
 
@@ -94,14 +93,14 @@ column=3
 [PACENOTE::THREE_LEFT]
 id=2
 Sounds=1
-Snd0=three_left.ogg
+Snd0=left_three.ogg
 link=INTO
 column=0
 
 [PACENOTE::THREE_RIGHT]
 id=9
 Sounds=1
-Snd0=three_right.ogg
+Snd0=right_three.ogg
 link=INTO
 column=1
 
@@ -125,14 +124,14 @@ column=3
 [PACENOTE::FOUR_LEFT]
 id=3
 Sounds=1
-Snd0=four_left.ogg
+Snd0=left_four.ogg
 link=INTO
 column=0
 
 [PACENOTE::FOUR_RIGHT]
 id=8
 Sounds=1
-Snd0=four_right.ogg
+Snd0=right_four.ogg
 link=INTO
 column=1
 
@@ -147,31 +146,31 @@ column=2
 [PACENOTE::FIVE_LEFT]
 id=4
 Sounds=1
-Snd0=five_left.ogg
+Snd0=left_five.ogg
 link=INTO
 column=0
 
 [PACENOTE::FIVE_RIGHT]
 id=7
 Sounds=1
-Snd0=five_right.ogg
+Snd0=right_five.ogg
 link=INTO
 column=1
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Reihe 7 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-[PACENOTE::EASY_LEFT]
+[PACENOTE::SIX_LEFT]
 id=5
 Sounds=1
-Snd0=easy_left.ogg
+Snd0=left_six.ogg
 link=INTO
 column=0
 
-[PACENOTE::EASY_RIGHT]
+[PACENOTE::SIX_RIGHT]
 id=6
 Sounds=1
-Snd0=easy_right.ogg
+Snd0=right_six.ogg
 link=INTO
 column=1
 
@@ -187,14 +186,14 @@ column=2
 [PACENOTE::FLAT_LEFT]
 id=26
 Sounds=1
-Snd0=flat_left.ogg
+Snd0=left_flat.ogg
 link=INTO
 column=0
 
 [PACENOTE::FLAT_RIGHT]
 id=25
 Sounds=1
-Snd0=flat_right.ogg
+Snd0=right_flat.ogg
 link=INTO
 column=1
 
