--- a/Plugins/Pacenote/config/pacenotes/packages/Smo.ini
+++ b/Plugins/Pacenote/config/pacenotes/packages/Smo.ini
@@ -45,5 +45,5 @@ file=prepositions\Smo-Extended.ini
 file=Beschaffenheit\Beschaffenheit.ini
 
 
-[CATEGORY::Uebrig1]
-file=Uebrig1\Uebrig1.ini
+[CATEGORY::Unsortiert]
+file=Unsortiert\Unsortiert.ini
