--- a/.gitignore
+++ b/.gitignore
@@ -2632,3 +2632,4 @@ Plugins/Pacenote/sounds/english/male/steve/wooden_fence.ogg
 Plugins/Pacenote/sounds/english/male/steve/yump.ogg
 Plugins/Pacenote/sounds/czech/
 Plugins/Pacenote/Smo-Dev/
+Plugins/Pacenote/sounds/german/male/Hans_Juchard/Hans_Juchard.zip
